2010-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: 
	Default snmp-max-msg-size is set back to 1470
	
	* perllib/Torrus/DevDiscover/Foundry.pm: new discovery module

2010-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2790.host-resources.xml:
	[Bernhard Schmidt] Simplify the Uptime graph to display only Days

	* xmlconfig/vendor/ucd.ucd-snmp.xml:
	[Bernhard Schmidt] make Block I/O datasources a COUNTER
	correct display units for Memory

	* perllib/Torrus/DevDiscover/UcdSnmp.pm:
	[Bernhard Schmidt] added ssCpuRawSoftIRQ

2010-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/torrus.fcgi.in: FastCGI support

	* templates/default-login.html: Added "remember me"

	* perllib/Torrus/ApacheHandler.pm: Changed to Torrus::CGI

	* perllib/Torrus/Apache2Handler.pm: Changed to Torrus::CGI.
	Now incompatible with "SetHandler modperl"

	* perllib/Torrus/CGI.pm: New HTTP handler instead of two different
	Apache handlers.

2010-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/flushmonitors.in: new utility

	* bin/compilexml.in: Dynamic tokenset members are preserved between
	compilations

	* perllib/Torrus/ConfigTree.pm (tsetAddMember): Tokenset members
	have now an indicated origin (monitor/static)

	* perllib/Torrus/Monitor.pm: Alarms are now persistent between
	config re-compilations

2010-02-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm:
	New parameter: node-display-name. Now interface names are not
	underscored
	

2010-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_multigraph):
	new multigraph parameters: line-stack-X, line-alpha-X

2010-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	Default snmp-max-msg-size is set to 65535 for SNMP v1 and v2
