@@ -358,6 +358,12 @@ other purpose, because there's no numeric value associated with it.
 
 =back
 
+=item * C<nodeid>
+
+Optional. If defined, it should contain a unique string identifying
+this particular leaf or subtree.
+
+
 =item * C<node-display-name>
 
 Optional. If defined, it overrides the subtree or leaf name for displaying.
@@ -1138,9 +1144,10 @@ Returns the value of the parameter for the given view, monitor, or action.
 Returns the URL which displays the given node using the given view.
 If the view is omitted, use the default view.
 
-=item * C<pathUrl(token, [view])>
+=item * C<persistentUrl(token, [view])>
 
-Same as above, but the URL specifies the full path, instead of the token.
+Same as above, but the URL is built from persistent information: nodeid
+(if available) or full path in the tree.
 
 =item * C<splitUrls(token, [view])>
 
