@@ -27,7 +27,7 @@
 %]
   <DIV CLASS="[% evenRow ? 'ListRowEven' : 'ListRow' %]">
     <SPAN CLASS="NodeName">[%entry.0%]:
-    <A HREF="[%pathUrl(entry.0, entry.1)%]">
+    <A HREF="[%persistentUrl(entry.0, entry.1)%]">
     [% entry.1 %]</A>
     </SPAN>
   </DIV>
