@@ -22,7 +22,7 @@
     etoken = pathToken(entry.0);
 %]
   <DIV CLASS="[% evenRow ? 'ListRowEven' : 'ListRow' %]">
-    <SPAN CLASS="NodeName"><A HREF="[%pathUrl(etoken)%]">
+    <SPAN CLASS="NodeName"><A HREF="[%persistentUrl(etoken)%]">
     [% entry.0 %]</A></SPAN>
     <SPAN CLASS="NodeDescr">
     [% IF entry.1; entry.1 _ ': ' _ xmlnorm(nodeParam(etoken, entry.1));
