@@ -1,3 +1,12 @@
+2010-04-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/ConfigTree.pm,
+	perllib/Torrus/ConfigTree/Writer.pm,
+	perllib/Torrus/CGI.pm:
+	New parameter: nodeid. It defines a new way of referring
+	to subtrees and leaves.
+	Also IF-MIB and Foundry discovery is updated.
+
 2010-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm: 
